--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
   animated_splash_screen: ^1.1.0
+  connectivity: ^3.0.6
+  fluttertoast: ^8.0.8
+  get: ^4.3.8
 
 dev_dependencies:
   flutter_test:
