--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   connectivity: ^3.0.6
   fluttertoast: ^8.0.8
   get: ^4.3.8
+  http: ^0.13.4
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
 
 dev_dependencies:
   flutter_test:
